test/types/records/split-init/error-never-initialized-values-not-mentioned2.good
error-never-initialized-values-not-mentioned2.chpl:3: In function 'error':
error-never-initialized-values-not-mentioned2.chpl:5: error: Cannot default-initialize b1: borrowed C
note: non-nil class types do not support default initialization
note: Consider using the type borrowed C? instead
